tests/snapshots/formats__aifc__alaw.aifc.snap
---
source: tests/formats.rs
expression: "common::explore(&name, &data)"
---
▾ alaw.aifc — AIFF-C A-law, 8000 Hz, 1 ch, 8-bit, 20 ms  [0x0+0xe8]
  ▾ Header  [0x0+0xc]
      Chunk ID: "FORM"  [0x0+0x4]
      Size: 224  [0x4+0x4]
      Form type: "AIFC"  [0x8+0x4]
  ▾ FVER — 4 bytes  [0xc+0xc]
      Chunk ID: "FVER"  [0xc+0x4]
      Chunk size: 4  [0x10+0x4]
      Timestamp: 1990-05-23 14:40:00 UTC  [0x14+0x4]
  ▾ COMM — A-law, 8000 Hz, 1 ch, 8-bit, 20 ms  [0x18+0x20]
      Chunk ID: "COMM"  [0x18+0x4]
      Chunk size: 24  [0x1c+0x4]
      Channels: 1  [0x20+0x2]
      Sample frames: 160  [0x22+0x4]
      Sample size: 8  [0x26+0x2]
      Sample rate: 8000  [0x28+0xa]
      Compression type: "alaw" — A-law  [0x32+0x4]
      Compression name: ""  [0x36+0x1]
  ▾ SSND — 168 bytes  [0x38+0xb0]
      Chunk ID: "SSND"  [0x38+0x4]
      Chunk size: 168  [0x3c+0x4]
      Offset: 0  [0x40+0x4]
      Block size: 0  [0x44+0x4]
      Samples — A-law, 8000 Hz, 1 ch, 8-bit, 20 ms  [0x48+0xa0]
