tests/snapshots/formats__aifc__ima4-afconvert.aifc.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ ima4-afconvert.aifc — AIFF-C IMA 4:1 ADPCM, 16 kHz, mono, 204 ms  [0x0+0x16c6]
  ▾ Header  [0x0+0xc]
      Chunk ID: "FORM"  [0x0+0x4]
      Size: 5822  [0x4+0x4]
      Form type: "AIFC"  [0x8+0x4]
  ▾ FVER — AIFF-C version 1  [0xc+0xc]
      Chunk ID: "FVER"  [0xc+0x4]
      Chunk size: 4  [0x10+0x4]
      Timestamp: 1990-05-23 14:40:00 UTC  [0x14+0x4]
  ▾ COMM — IMA 4:1 ADPCM, 16 kHz, mono, 204 ms  [0x18+0x26]
      Chunk ID: "COMM"  [0x18+0x4]
      Chunk size: 30  [0x1c+0x4]
      Channels: 1  [0x20+0x2]
      Sample frames: 51  [0x22+0x4]
      Sample size: 0  [0x26+0x2]
      Sample rate: 16000  [0x28+0xa]
      Compression type: "ima4" — IMA 4:1 ADPCM  [0x32+0x4]
      Compression name: "IMA 4:1"  [0x36+0x8]
  ▾ CHAN — Mono, 1 ch  [0x3e+0x14]
      Chunk ID: "CHAN"  [0x3e+0x4]
      Chunk size: 12  [0x42+0x4]
      Layout tag: 0x640001 — Mono, 1 ch  [0x46+0x4]
      Channel bitmap: 0x0 []  [0x4a+0x4]
      Channel descriptions: 0  [0x4e+0x4]
  ▾ FLLR — 3990 bytes  [0x52+0xf9e]
      Chunk ID: "FLLR"  [0x52+0x4]
      Chunk size: 3990  [0x56+0x4]
      Padding  [0x5a+0xf96]
  ▾ SSND — 1742 bytes  [0xff0+0x6d6]
      Chunk ID: "SSND"  [0xff0+0x4]
      Chunk size: 1742  [0xff4+0x4]
      Offset: 0  [0xff8+0x4]
      Block size: 0  [0xffc+0x4]
      Samples — IMA 4:1 ADPCM, 16 kHz, mono, 204 ms  [0x1000+0x6c6]
