tests/snapshots/formats__aifc__ima4.aifc.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ ima4.aifc — AIFF-C IMA 4:1 ADPCM, 8 kHz, mono, 56 ms  [0x0+0x136]
  ▾ Header  [0x0+0xc]
      Chunk ID: "FORM"  [0x0+0x4]
      Size: 302  [0x4+0x4]
      Form type: "AIFC"  [0x8+0x4]
  ▾ FVER — AIFF-C version 1  [0xc+0xc]
      Chunk ID: "FVER"  [0xc+0x4]
      Chunk size: 4  [0x10+0x4]
      Timestamp: 1990-05-23 14:40:00 UTC  [0x14+0x4]
  ▾ COMM — IMA 4:1 ADPCM, 8 kHz, mono, 56 ms  [0x18+0x20]
      Chunk ID: "COMM"  [0x18+0x4]
      Chunk size: 24  [0x1c+0x4]
      Channels: 1  [0x20+0x2]
      Sample frames: 7  [0x22+0x4]
      Sample size: 4  [0x26+0x2]
      Sample rate: 8000  [0x28+0xa]
      Compression type: "ima4" — IMA 4:1 ADPCM  [0x32+0x4]
      Compression name: ""  [0x36+0x1]
  ▾ SSND — 246 bytes  [0x38+0xfe]
      Chunk ID: "SSND"  [0x38+0x4]
      Chunk size: 246  [0x3c+0x4]
      Offset: 0  [0x40+0x4]
      Block size: 0  [0x44+0x4]
      Samples — IMA 4:1 ADPCM, 8 kHz, mono, 56 ms  [0x48+0xee]
